--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,8 +1,3 @@
 # apphosting.yaml
-serviceId: ryokou-app
+serviceId: trip
 runtime: nodejs20
-env:
-  - name: NEXT_PUBLIC_GOOGLE_MAPS_KEY
-    value: ""
-  - name: NEXT_PUBLIC_WEATHER_KEY
-    value: ""
