--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -48,6 +48,8 @@ env:
     availability:
       - BUILD
       - RUNTIME
+  - variable: NEXT_PUBLIC_AVIATIONSTACK_API_KEY
+    secret: AVIATIONSTACK_API_KEY
 
   # Grant access to secrets in Cloud Secret Manager.
   # See https://firebase.google.com/docs/app-hosting/configure#secret-parameters
